--- a/src/App.css
+++ b/src/App.css
@@ -1,60 +1,60 @@
 :root {
-    --red: #FF6663;
-    --orange: #FEB144;
-    --yellow: #FDFD97;
-    --green: #9EE09E;
-    --blue: #9EC1CF;
-    --blue-name: #4ba2c4;
-    --purple: #CC99C9;
-    --active: #c4312e;
-    --inactive: #38c538;
-    --main: #1c5064;
+	--red: #ff6663;
+	--orange: #feb144;
+	--yellow: #fdfd97;
+	--green: #9ee09e;
+	--blue: #9ec1cf;
+	--blue-name: #4ba2c4;
+	--purple: #cc99c9;
+	--active: #c4312e;
+	--inactive: #38c538;
+	--main: #1c5064;
 }
 
 .App {
-    background-color: rgb(249, 249, 249);
-    padding-top: var(--bs-gutter-y, .75rem);
-    padding-bottom: var(--bs-gutter-y, .75rem);
-    font-family: 'Borel', cursive, 'Merriweather', serif, 'Open Sans', sans-serif;
-    height: 100vh;
-    color: var(--main);
+	background-color: rgb(249, 249, 249);
+	padding-top: var(--bs-gutter-y, 0.75rem);
+	padding-bottom: var(--bs-gutter-y, 0.75rem);
+	font-family: "Borel", cursive, "Merriweather", serif, "Open Sans", sans-serif;
+	height: 100vh;
+	color: var(--main);
 }
 
 a,
 a:visited,
 a:active {
-    text-decoration: none;
-    color: var(--blue-name);
+	text-decoration: none;
+	color: var(--blue-name);
 }
 
 .form-control,
 .form-select {
-    color: var(--main);
+	color: var(--main);
 }
 
 .form-control:focus,
 .form-select:focus {
-    border-color: var(--blue-name);
-    box-shadow: var(--blue-name);
+	border-color: var(--blue-name);
+	box-shadow: var(--blue-name);
 }
 
-.col>div {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
+.col > div {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
 }
 
 .rooms-menu-page,
 .one-room-page,
 .add-room-page {
-    height: 89%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-    font-family: "Poppins", sans-serif;
+	height: 89%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: space-between;
+	font-family: "Poppins", sans-serif;
 }
 
 /* ------------------*/
@@ -62,17 +62,17 @@ a:active {
 /* ------------------*/
 
 .title {
-    height: 11%;
-    text-align: center;
+	height: 11%;
+	text-align: center;
 }
 
-.title-name>* {
-    font-size: 32px;
-    color: var(--blue-name);
+.title-name > * {
+	font-size: 32px;
+	color: var(--blue-name);
 }
 
 .bi-house-heart {
-    font-size: 30px;
+	font-size: 30px;
 }
 
 /* ----------------------*/
@@ -80,56 +80,67 @@ a:active {
 /* ----------------------*/
 
 .room-button {
-    height: 122px;
-    border-radius: 25px;
+	aspect-ratio: 1 / 1;
+	border-radius: 25px;
 }
 
-.room-button>span,
-.one-room-name>span {
-    font-size: 30px;
+.room-button > span,
+.one-room-name > span {
+	font-size: 30px;
+}
+.rooms-menu {
+	/* height: calc(100% - 100px); */
+	height: 100%;
+	align-items: center;
+}
+.rooms-menu > .row {
+	height: 100%;
+}
+.rooms-menu-col {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
 }
 
 /* ------------------*/
 /* -----ONE ROOM-----*/
 /* ------------------*/
 .one-room-top {
-    width: 100%;
+	width: 100%;
 }
 
 .one-room-name {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: start;
-    line-height: 1.5rem;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: start;
+	line-height: 1.5rem;
 }
 
 .one-room-erase-button {
-    position: absolute;
-    left: 297px;
-    top: 107px;
+	text-align: center;
 }
 
 .fa-trash-o {
-    font-size: 1.2rem;
+	font-size: 1.2rem;
 }
 
-.one-room-page>.container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-    height: 150px;
+.one-room-page > .container {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: space-between;
+	height: 150px;
 }
 
-.one-room-page>.container>.row {
-    width: 100%;
+.one-room-page > .container > .row {
+	width: 100%;
 }
 
 .one-room-add-button {
-    border: none;
-    background-color: none;
-    padding: 0px;
+	border: none;
+	background-color: none;
+	padding: 0px;
 }
 
 /* ------------------------*/
@@ -137,31 +148,51 @@ a:active {
 /* ------------------------*/
 
 .device-in-room-page {
-    padding: 1rem;
+	padding: 1rem;
 }
 
 #device-in-room {
-    width: 100px;
-    height: 100px;
-    position: relative;
-    justify-content: end;
-    padding: 0.5rem;
-    border-radius: 25px;
-    margin: 0px;
-
+	width: 140px;
+	height: 140px;
+	position: relative;
+	justify-content: end;
+	padding: 0.5rem;
+	border-radius: 25px;
+	margin: 0px;
 }
 
 #device-in-room-delete {
-    position: absolute;
-    right: 0.5rem;
-    top: 0.5rem;
-    border-radius: 25px;
-    width: 30px;
-    height: 30px;
-    border: none;
+	position: absolute;
+	right: 0.5rem;
+	top: 0.5rem;
+	border-radius: 25px;
+	width: 30px;
+	height: 30px;
+	border: none;
 }
 
 #device-in-room-col {
-    display: flex;
-    justify-content: center;
+	display: flex;
+	justify-content: center;
+}
+
+@media (max-width: 575px) {
+	.rooms-menu {
+		max-width: 460px !important;
+	}
+	.device-in-room-container {
+		max-width: 460px !important;
+	}
+	#device-in-room {
+		width: 100px;
+		height: 100px;
+	}
+}
+@media (min-width: 992px) {
+	.rooms-menu {
+		max-width: 75% !important;
+	}
+	.device-in-room-container {
+		max-width: 50% !important;
+	}
 }
